Controller protocol for UI